--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Personal recipe book.",
   "main": "server.js",
   "scripts": {
+    "bundle": "browserify src/app.js -t babelify --outfile build/app.js",
+    "build": "rm -rf build && mkdir build && npm run bundle",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "fresh-start": "npm run bundle && node server.js" 
   },
   "repository": {
     "type": "git",
@@ -20,6 +23,16 @@
   "dependencies": {
     "app-module-path": "^2.1.0",
     "express": "^4.14.0",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-tap-event-plugin": "^2.0.1"
+  },
+  "devDependencies": {
+    "babel-plugin-module-resolver": "^2.3.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1"
   }
 }
