--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
   "homepage": "https://github.com/matheuscodes/matheuscooks#readme",
   "dependencies": {
     "app-module-path": "^2.1.0",
+    "core-decorators": "^0.14.0",
     "express": "^4.14.0",
     "http": "0.0.0",
+    "material-ui": "^0.16.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^2.3.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
