--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
   "homepage": "https://github.com/matheuscodes/matheuscooks#readme",
   "dependencies": {
     "app-module-path": "^2.1.0",
+    "chalk": "^1.1.3",
     "core-decorators": "^0.14.0",
     "express": "^4.14.0",
     "http": "0.0.0",
+    "ingredients": "git+https://github.com/matheuscodes/matheuscooks-ingredients.git",
+    "lodash": "^4.17.3",
     "material-ui": "^0.16.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-tap-event-plugin": "^2.0.1",
-    "ingredients": "git+https://github.com/matheuscodes/matheuscooks-ingredients.git"
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^2.3.0",
