Removing unused stuff.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "material-ui": "^0.16.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "matheuscooks-recipes": "git+https://github.com/matheuscodes/matheuscooks-recipes.git"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^2.3.0",
